--- a/lovelinh.html
+++ b/lovelinh.html
@@ -108,7 +108,7 @@
 
 <body>
     <div id="child">
-        <h4>I LOVE YOU</h4>
+        <h4>I LOVE YOU LINH</h4>
     </div>
     <!--LINH！！！-->
     <canvas id="pinkboard"></canvas>
